tests/fixtures/invalid/pow_bytes_bytes_int.py
# Cannot call pow() with Bytes, Bytes, Int
x = pow(b"hello", b"hello", 1)
